--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**Dummy JavaScript Action (no external deps).**   It echoes inputs so you can wire TARGET_REPOs.   Later, swap `dist/index.js` for a bundled build that includes your real logic.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ncc build src/index.ts -o dist"
   },
   "keywords": [],
   "author": "",
