--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
   "name": "ai-dev-agent",
-  "version": "1.1.0",
-  "description": "**Dummy JavaScript Action (no external deps).**   It echoes inputs so you can wire TARGET_REPOs.   Later, swap `dist/index.js` for a bundled build that includes your real logic.",
-  "main": "index.js",
+  "version": "1.0.1",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build src/index.ts -o dist"
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.1",
-    "js-yaml": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "^24.3.0",
-    "@vercel/ncc": "^0.38.3",
-    "typescript": "^5.9.2"
-  },
-  "type": "commonjs"
+    "typescript": "^5.4.0"
+  }
 }
