--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "types": ["node"],
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "outDir": "dist",
+    "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "src/**/*.js"],
-  "exclude": ["src/vendor/**/*.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["src/agent", "src/vendor"]
 }
